# uniformBase

./: .gitignore  .hlint.yaml  ChangeLog.md  README.md  UniformBase.hs  cabal.project  cmdLineArgs.code-workspace  fileio.code-workspace  hie.yaml  json.code-workspace  package.yaml  pandocWS.code-workspace  stack.yaml  stack.yaml.notused  strings.code-workspace  uniform.cabal  uniform.md  uniformBase.cabal
app/: StartAppTest.hs
uniform-cmdLineArgs/: README.md  package.yaml  stack.yaml  uniform-cmdLineArgs.cabal
uniform-cmdLineArgs/Uniform/: CmdLineArgs.hs
uniform-cmdLineArgs/src/: CmdLineArgsExample.hs
uniform-cmdLineArgs/tests/: Testing.hs
uniform-cmdLineArgs/tests/Uniform/: CmdLineArgs_test.hs
uniform-convenience/: .ghci  package.yaml  stack.leksah.yaml  stack.yaml  uniform-convenience.cabal
uniform-convenience/Uniform/Codes/: LanguageCode.hs  LanguageTypedText.hs
uniform-convenience/Uniform/Convenience/: DataVarious.hs  ReadCSV.hs  StartApp.hs
uniform-convenience/Uniform/Test/: TestHarness.hs  Utils.hs
uniform-convenience/src/Uniform/Test/: TestHarness.hs
uniform-convenience/test/Uniform/: TestHarness.hs
uniform-convenience/test/Uniform/Codes/: LanguageCode_test.hs
uniform-convenience/tests/: Testing.hs
uniform-convenience/tests/Uniform/Codes/: LanguageCode_test.hs
uniform-convenience/tests/Uniform/Test/: TestHarness_test.hs
uniform-error/: ChangeLog.md  README.md  package.yaml  stack.yaml  uniform-error.cabal
uniform-error/Uniform/: Error.hs
uniform-error/src/Uniform/: Error.hs  StartApp.hs
uniform-error/test/: Testing.hs
uniform-error/test/Uniform/: Error_test.hs
uniform-error/tests/Uniform/: Error_test.hs
uniform-fileio/: .gitignore  package.yaml  stack.yaml  stack.yaml.orig  testDirResN  uniform-fileio.cabal  uniform-fileio.oldcabal
uniform-fileio/Uniform/: ByteString.hs  FileIO.hs  FileIOalgebra.hs  FileStatus.hs  FileStrings.hs  Filenames.hs  PathShowCase.hs  PathWrapper.hs  Piped.hs  TypedFile.hs
uniform-fileio/dir4test/: .ghci
uniform-fileio/src/Uniform/: ByteString.hs  PathShowCase.hs  TypedFile.hs
uniform-fileio/test/: Testing.hs
uniform-fileio/test/Uniform/: Filenames_test.hs  Piped_test.hs
uniform-fileio/testDirFileIO/: .a4.hidden
uniform-fileio/tests/: Testing.hs  UniformFileIOTest.hs
uniform-fileio/tests/Uniform/: FileStatus_test.hs  FileStrings_test.hs  Filenames_test.hs  PathShowCase_test.hs  TypedFile_test.hs
uniform-ftp/: .ghci  stack.yaml  uniform-ftp.cabal
uniform-ftp/Uniform/: Ftp.hs  Ftp.sync-conflict-20190408-080352-6TXAXKE.hs
uniform-ftp/dir4test/: testghci
uniform-ftp/src/: FtpMain.hs
uniform-ftp/tests/: Testing.hs
uniform-ftp/tests/Uniform/: Ftp_test.hs
uniform-http/: README.md  stack.leksah.yaml  stack.yaml  uniform-http.cabal
uniform-http/Uniform/: Http.hs  HttpCall.hs  HttpURI.hs
uniform-http/tests/: Testing.hs
uniform-http/tests/Uniform/: HttpCall_test.hs  HttpURI_test.hs
uniform-json/: .ghci  old.ghci  package.yaml  stack.yaml  uniform-json.cabal
uniform-json/Uniform/: BibTex.hs  Json.hs  Pandoc.hs  Yaml.hs
uniform-json/notyetready/: TestingJson.hs
uniform-json/src/: Lib.hs
uniform-json/test/: TestingJson.hs
uniform-json/test/Uniform/: Yaml_test.hs
uniform-json/tests/: Testing.hs
uniform-json/tests/Uniform/: Json_test.hs  Pandoc_test.hs  Yaml_test.hs
uniform-pandoc/: hie.yaml  stack.yaml  uniform-json.cabal  uniform-pandoc.cabal
uniform-pandoc/Uniform/: BibTex.hs  DocRep.hs  DocValue.hs  HTMLout.hs  Markdown copy.hs  Markdown.hs  Pandoc.hs  PandocImports.hs  ProcessPDF.hs
uniform-pandoc/src/: TestingPandoc.hs
uniform-pandoc/tests/: Testing.hs  someText2.texsnip  someTextShort.pandoc  someTextShort.texsnip  someTextShort2.tex  someTextShortTarget.tex
uniform-pandoc/tests/Uniform/: BibTex_test.hs  DocRep_test.hs  DocValue_test.hs  Markdown_test.hs  Pandoc_test.hs  ProcessPDF_test.hs
uniform-pandoc/tests/data/: complex.html  complex.md  complex.pandoc  complex.tex  complex.texsnip  someText.html  someText.pandoc  someText.tex  someText.texsnip  someTextShort.docrep  someTextShort.html  someTextShort.tex  someTextShort2.docrep  someTextShortRWtest.tex  withFigure.tex  withRef.blg  withRef.docrep  withRef.html  withRef.md  withRef.pandoc  withRef.tex  withRef.texsnip
uniform-pandoc/tests/data/reesources/: BibTexLatex.bib
uniform-pandoc/tests/data/resources/: publistAF.texsnip
uniform-pandoc/tests/data/startValues/: withRef.md
uniform-pathTest/: stack.yaml  uniform-pathTest.cabal
uniform-pathTest/Uniform/: PathShowCase.hs  PathWrapper.hs
uniform-pathTest/tests/: Testing.hs
uniform-pathTest/tests/Uniform/: PathTest_test.hs
uniform-pretty/: stack.yaml  uniform-example.cabal  uniform-pretty.cabal
uniform-pretty/Uniform/: Example.hs  Pretty.hs
uniform-pretty/tests/: Testing.hs
uniform-pretty/tests/Uniform/: Pretty_test.hs
uniform-regex/: stack.yaml  uniform-regex.cabal
uniform-regex/Uniform/: Regex.hs
uniform-regex/tests/: Testing.hs
uniform-shake/: .ghci  shake-path.cabal  stack.yaml  uniform-shake.cabal
uniform-shake/Uniform/: Shake.hs
uniform-shake/Uniform/Shake/: Path.hs  Path.sync-conflict-20190322-204321-7IX4PQI.hs
uniform-shake/src/: Main.hs  TestingShake.hs
uniform-shake/tests/: Testing.hs
uniform-shake/tests/Uniform/: Shake_test.hs
uniform-time/: package.yaml  stack.yaml  uniform-time.cabal
uniform-time/Uniform/: Time.hs
uniform-time/src/: TestingTime.hs
uniform-time/src/Uniform/: Time.hs
uniform-time/test/Uniform/: Time_test.hs
uniform-time/tests/: TestingTime.hs
uniform-time/tests/Uniform/: Time_test.hs
uniform-watch/: stack.yaml  tes1.txt  test1.md  uniform-watch.cabal
uniform-watch/Uniform/: Watch.hs
uniform-watch/src/: WatchMain.hs
uniform-watch/tests/: Testing.hs
uniform-watch/tests/Uniform/: TwitchMinimal.hs  Watch_test.hs
uniform-webserver/: stack.yaml  uniform-webserver.cabal
uniform-webserver/Uniform/: WebServer.hs
uniform-webserver/src/: ExampleMain.hs
uniform-webserver/tests/: Testing.hs
uniform-webserver/tests/Uniform/: WebServer.hs  WebServer_test.hs
(+163 files in other folders)
