name: uniform-cmdLineArgs
version: 0.0.1.0

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:CmdLineArgs
synopsis: CmdLineArgs
description: CmdLineArgs

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-cmdLIneArgs.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        , HTF
        , uniform-algebras
        , uniform-strings
        , uniform-error 
       , optparse-applicative
       , optparse-generic
    exposed-modules:
        Uniform.CmdLineArgs

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

executable cmdLineExample
    main-is: CmdLineArgsExample.hs
    build-depends: base, HTF
        , uniform-strings
        , uniform-fileio
        , uniform-convenience
        , uniform-error 
        -- , CmdLineUtilities
       , optparse-applicative
       , optparse-generic
        -- , MainLitText

    default-language: Haskell2010
    hs-source-dirs: src
    other-modules:
--    other-modules: Main2sub

Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
        , uniform-strings
        , uniform-error
        , uniform-cmdLineArgs
        , uniform-error 

--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.CmdLineArgs_test
