name: uniform-convenience
version: 0.0.9.33
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: convenience functions
description: some convenience functions, which are not good algebras
    and debatable
    exports in multiple modules

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-algebra.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , safe
        , HTF
--        , uniform-fileio
--            , uniform-strings
        , uniform-error
        , uniform-algebras
        , uniform-fileio
        , csv
        , parsec
        , path, path-io
        , pretty-show
    exposed-modules:
        Uniform.Convenience.StartApp
        Uniform.Convenience.ReadCSV
        Uniform.Test.TestHarness
        Uniform.Test.Utils

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

-- requires start files in .TestHarness!
--Test-Suite TestHarnessTestAuto
--    type:       exitcode-stdio-1.0
--    main-is:    Testing.hs
--    build-depends: base, HTF
--        , uniform-strings
--        , uniform-error
--        , uniform-convenience
--        , uniform-fileio
--        , uniform-algebras
--    default-language: Haskell2010
--    hs-source-dirs: tests
--    other-modules:
--        Uniform.Test.TestHarness_test
