name: uniform-error
version: 0.0.10.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Error Exception
synopsis: handling of errors in the uniform framework
description: a close to minimal package to handle errors and exception
    in a simple but flexible way to reduce complexity of Haskell.
        0.0.9 fixed the callIO to really get the errors in IO

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-error.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        , HTF
    exposed-modules:
        Uniform.Error

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
       , uniform-strings
       , uniform-error
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: TestingError.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Error_test
