name: uniform-fileio
version: 0.0.15.0
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Data, Text, Uniform
synopsis: uniform file handling operations
description: reduce complexity of Haskell by providing a set of uniformly named
    operations to handle files with an uniform handling of error
    0.0.8 for use in litText
    0.0.11 fixed callIO and use callIO everywhere
    0.0.12 changed to use path library for filnames
    0.0.14.2 changed copyFile' to copyOneFile renameOneFile
    0.0.14.3 path without wrapper 
    0.0.14.6 fix fileExtension confusion
    0.0.15.0 fix building issue with time 

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-fileio.git

library
    build-depends: base -any,
            bytestring -any,
            directory ,
            filepath -any,
            pureMD5 -any,
            deepseq,
            text -any,
            unix -any,
            pipes ,
            safe,
            path  ,
            path-io ,
            exceptions
            , split
            , zlib
            , uniform-strings
            , uniform-error
            , uniform-algebras
            , uniform-time ==  0.1.0

    exposed-modules:
             Uniform.FileIO
             Uniform.Filenames
             -- exposed only for test use
             Uniform.FileStrings
             Uniform.Piped
             Uniform.FileIOalgebra
             Uniform.FileStatus
             Uniform.TypedFile
            Uniform.PathShowCase
            Uniform.Time

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules: 

Test-Suite fileioTestAuto
    type:       exitcode-stdio-1.0
    main-is:    Testing.hs
    build-depends: base, HTF
        , uniform-fileio
        , uniform-strings
        , uniform-error
        , uniform-time
        , test-invariant
        , QuickCheck
        , bytestring
        , path
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
             Uniform.Filenames_test
             -- exposed only for test use
             Uniform.FileStrings_test
             Uniform.TypedFile_test
            Uniform.FileStatus_test
            Uniform.PathShowCase_test
