name: uniform-ftp
version: 0.0.1.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:Ftp
synopsis: Ftp
description: Ftp

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-ftp.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        -- , HTF
        , uniform-algebras
        , uniform-strings
        , uniform-error 
        , uniform-fileio
        -- , ftp-client
        , ftphs
        -- , monads-tf
        , transformers
    exposed-modules:
        Uniform.Ftp

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

executable ftpTest
    main-is: FtpMain.hs
    hs-source-dirs: src
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        uniform-strings -any,
        -- uniform-convenience -any,
        -- uniform-cmdLineArgs,
        uniform-fileio -any,
        uniform-error
        -- , uniform-shake
        -- ,uniform-webserver  
        -- , uniform-watch 
        , uniform-ftp

Test-Suite tests_ftp
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
       , uniform-strings
       , uniform-error
       , uniform-ftp
--       , data-easy
--       , basics -- must not be included, gives dependency issue
        , transformers 
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Ftp_test
