name: uniform-json
version: 0.0.1
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: handling of JSON and YAML in an uniform way and some pandoc stuff 
description: remove particular aspects of abstraction in json and yaml

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-json.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        -- , safe
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , HTF
        -- , safe
        , aeson
        , lens-aeson 
        , lens
        , yaml 
        , unordered-containers
        , convertible
        , pandoc 

    exposed-modules:
        Uniform.Json 
        Uniform.Yaml 
        Uniform.Pandoc

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite jsontest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
        , test-invariant
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-error
       , uniform-time
       , uniform-strings
       , uniform-time
    --    , pretty-show
--       , old-time
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Json_test
        Uniform.Yaml_test
        Uniform.Pandoc_test