name: uniform-pandoc 
version: 0.0.1
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: handling of   some pandoc stuff 
description: remove particular aspects of abstraction 

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-pandoc.git

library
    build-depends:
        base >=4.8 && <= 5
        -- , monads-tf
        -- , safe
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-json 
        -- , HTF
        -- , safe
        -- , aeson
        -- , lens-aeson 
        -- , aeson-pretty
        -- , lens
        -- , yaml 
        -- , unordered-containers
        , containers
        -- , convertible
        , pandoc 
        , pandoc-types
        , bibtex
        , pandoc-citeproc
        , doctemplates
        -- , directory
        -- , parsec

    exposed-modules:
        Uniform.Pandoc
        Uniform.BibTex

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite jsontest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
        , test-invariant
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-error
       , uniform-time
       , uniform-strings
       , uniform-time
       , uniform-json 
       , uniform-pandoc
       , bibtex 
    --    , pretty-show
--       , old-time
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Pandoc_test
        Uniform.BibTex_test
