name: uniform-pandoc 
version: 0.0.2
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Uniform
synopsis: handling of   some pandoc stuff 
description: remove particular aspects of abstraction 

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-pandoc.git

library
    build-depends:
        base >=4.8 && <= 5
        , process
        , uniform-strings
        , uniform-error
        , uniform-fileio
        , uniform-json 
        , uniform-algebras
        , containers
        , pandoc ==2.9.2.1
        , pandoc-types
        , doclayout
        , bibtex
        , pandoc-citeproc
        , doctemplates

    exposed-modules:
        Uniform.Pandoc
        Uniform.BibTex
        Uniform.Markdown
        Uniform.ProcessPDF
        Uniform.HTMLout
        Uniform.DocValue 

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite jsontest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
        , test-invariant
       , uniform-error
       , uniform-time
       , uniform-strings
       , uniform-time
       , uniform-json 
       , uniform-pandoc
       , bibtex 
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Pandoc_test
        Uniform.BibTex_test
