name: uniform-pretty
version: 0.0.10.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:uniform
synopsis: A wrapper for ppretty package 
description: layer to isolate the pretty package 
    specifically to make it work for UTCTime 
    (but this is done in uniform-time)

    Not yet used - waits for solution for an instance 
    for UTCTime 

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-pretty.git

library
    build-depends:
        base >=4.8 && <= 5
        , pretty-show 
        -- , monads-tf
        -- , exceptions
        -- , safe
        -- , uniform-strings
        -- , HTF
        -- , uniform-algebras
        -- , uniform-error 
    exposed-modules:
        Uniform.Pretty

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite tests_pretty
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
       , uniform-strings
    --    , uniform-error
       , uniform-pretty
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Pretty_test
