name: uniform-regex
version: 0.0.10.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:regex
synopsis: regex
description: regex

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-regex.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        , HTF
        , uniform-algebras
        , uniform-strings
        , uniform-error 
        , hxt-regex-xmlschema
         , regex-tdfa
        , regex-tdfa-text
        , regex-compat
    exposed-modules:
        Uniform.Regex

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite tests_regex
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
       , uniform-strings
       , uniform-error
       , uniform-regex
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Regex_test
