name: shake-path
synopsis: path alternatives to shake functions
description: path alternatives to shake functions
version: 0.0.0.2
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove additions 2019 Andrew U. Frank 
maintainer: syd.kerckhove@gmail.com
homepage: http://cs-syd.eu
category: Development, Shake
author: Tom Sydney Kerckhove

library
    exposed-modules:
        Uniform.Shake.Path
    build-depends:
        base >=4.9 && <=5,
        shake >= 0.15 && < 0.18,
        path >= 0.5 && < 0.7,
        path-io >= 1.2 && < 1.5,
        uniform-fileio
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -Wall
