name: uniform-shake
synopsis: path alternatives to shake functions
description: shake top level functions using Path (not filepath)
               version 2 to include in uniform ecosystem
               1.0 used for my homepage - fixes

version: 0.0.1.0
cabal-version: >=1.10
build-type: Simple
license: MIT
license-file: LICENSE
copyright: Copyright: (c) 2017 Tom Sydney Kerckhove additions 2019 Andrew U. Frank 

category: Development, Shake
author: Tom Sydney Kerckhove and Andrew U Frank

library
    exposed-modules:
        Uniform.Shake
    other-modules:
        Uniform.Shake.Path
    build-depends:
        base >=4.9 && <=5,
        shake >= 0.15 && < 0.18,
        -- path,
        -- path-io,
        uniform-fileio   
        , uniform-strings
        , uniform-error
    
    default-language: Haskell2010
    hs-source-dirs: .
    ghc-options: -Wall

executable shakeMain
    main-is : Main.hs
    build-depends:  base -any
        -- HTF,
       , uniform-strings
       , uniform-error
       , uniform-shake
        -- shake >= 0.15 && < 0.18,
        -- path ==0.6.1.1,
        -- path-io ==1.4.2.1,
        -- uniform-fileio
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: src

Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any,
        HTF,
       uniform-strings,
       uniform-error,
       uniform-shake,
        shake >= 0.15 && < 0.18,
        -- path ==0.6.1.1,
        -- path-io ==1.4.2.1,
        uniform-fileio
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Shake_test
