name: uniform-time
version: 0.0.9
cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category: Time
synopsis: handling of time in the uniform framework
description: a close to minimal package for time
    in a simple but flexible way to reduce complexity of Haskell.

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-error.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        -- , safe
        , uniform-strings
        , uniform-error
        -- , HTF
        -- , safe
        , time
--        , old-time
        -- , time
        , convertible
--        , old-time
    exposed-modules:
        Uniform.Time

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite timetest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
--                    bytestring -any, mtl,
--                   text -any, utf8-string -any
       , uniform-error
       , uniform-time
       , uniform-strings
       , time
    --    , uniform-pretty
    --    , pretty-show 
--       , old-time
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: TestingTime.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Time_test
