name: uniform-watch
version: 0.0.10.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:watch
synopsis: watch
description: watch

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-watch.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        , HTF
        , uniform-algebras
        , uniform-fileio
        , uniform-strings
        , uniform-error 
        , twitch -any
         
    exposed-modules:
        Uniform.Watch

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:


Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF
       , uniform-strings
       , uniform-error
       , uniform-watch
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Watch_test
