name: uniform-watch
version: 0.0.10.1

cabal-version: >=1.22
build-type: Simple
license: GPL
license-file: GPL_3
maintainer: Andrew U. Frank <andrewufrank@gmail.com>
author: Andrew Frank
category:watch
synopsis: watch
description: watch

source-repository head
    type: git
    location: https://github.com/andrewufrank/uniform-watch.git

library
    build-depends:
        base >=4.8 && <= 5
        , monads-tf
        , exceptions
        , safe
        , uniform-strings
        , HTF
        , uniform-algebras
        , uniform-fileio
        , uniform-strings
        , uniform-error 
        , twitch -any
         
    exposed-modules:
        Uniform.Watch

    exposed: True
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: .
    other-modules:

executable watchTest
    main-is: WatchMain.hs
    hs-source-dirs: src, tests
    default-language: Haskell2010
    build-depends:
        base ==4.*,
        HTF,
        uniform-strings -any,
        uniform-convenience -any,
        -- uniform-cmdLineArgs,
        uniform-fileio -any,
        uniform-error,
        uniform-webserver,
        uniform-watch,
        twitch
        -- , uniform-shake
        -- ,uniform-webserver  
        -- -- , uniform-watch 
        -- , SSG -any
    other-modules:
        Uniform.Watch_test
        Uniform.TwitchMinimal
 

Test-Suite errortest
    type:       exitcode-stdio-1.0
    build-depends:  base -any
        , HTF -any
        , uniform-strings
        , uniform-error
        , uniform-watch
        , uniform-fileio
        , uniform-convenience
        , uniform-webserver
        , twitch
--       , data-easy
--       , basics -- must not be included, gives dependency issue
    main-is: Testing.hs
    buildable: True
    default-language: Haskell2010
    hs-source-dirs: tests
    other-modules:
        Uniform.Watch_test
